--- a/newschannel/enter.html
+++ b/newschannel/enter.html
@@ -6,7 +6,10 @@
 <script src="https://use.fontawesome.com/827dd5f7ff.js"></script>
 </head>
 <body>
-<H1>THIS WEEKS BEST SONG AND ANIMATION VIDEO</H1>
+<H1>THIS WEEKS BEST POSTER,IMAGE AND VIDEO</H1>
+ <section><h2>BEST POSTER OF THE WEEK:</h2>
+  <img src="anna.jpg" alt="anna poster">
+ </section>
 <section><h2>BEST SONG OF THE WEEK: ALESSIA CARA-HERE</h2>
 <audio controls>
 <source src = "audio.mp3" type = "audio/mp3">
