--- a/newschannel/enter.html
+++ b/newschannel/enter.html
@@ -8,7 +8,7 @@
 <body>
 <H1>THIS WEEKS BEST POSTER,IMAGE AND VIDEO</H1>
  <section><h2>BEST POSTER OF THE WEEK:</h2>
-  <img src="anna.jpg" alt="anna poster">
+  <img src="anna[1].jpg" alt="anna poster">
  </section>
 <section><h2>BEST SONG OF THE WEEK: ALESSIA CARA-HERE</h2>
 <audio controls>
